chore(pom): #1 fix some pom errors
refs #1